--- a/KNN/Makefile
+++ b/KNN/Makefile
@@ -1,8 +1,9 @@
 CC=g++
-MNIST_ML_ROOT := $(PWD)
-SRC := $(PWD)/src
+KNN_ROOT := $(PWD)
+MNIST_ML_ROOT := $(KNN_ROOT)/../../MNIST_Handwriting
+SRC := $(KNN_ROOT)/src
 CFLAGS := -std=c++11 -DEUCLID
-INCLUDE_DIR := $(PWD)/include/
+INCLUDE_DIR := $(KNN_ROOT)/include/
 
 all: main
 
